# cadastro-de-veiculos-pipeline-de-dados-FIPE

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  fipe_import.py
app/dashboard/: charts.py  dashboard.py  queries.py
app/db/: engine.py
app/pipeline/: fipe_import.py
app/utils/: funcoes.py
config/: db_config.py
data/: logs.txt
logs/: logs.txt
notebooks/: analise_fipe.ipynb
