[project]
name = "cadastro-veiculos-fipe"
version = "1.0.0"
description = "Pipeline de dados automatizada para coletar, armazenar e analisar dados da tabela FIPE"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy==2.0.42",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.2.1",
    "pandas==2.3.1",
    "requests==2.32.5",
    "matplotlib==3.10.7",
    "seaborn==0.13.2",
    "streamlit==1.57.0",
    "plotly==6.7.0",
]
